# newton_fractal

./: CMakeLists.txt  main.cpp  newton.ispc
